--- a/LaTeX/acteurs.tex
+++ b/LaTeX/acteurs.tex
@@ -85,4 +85,6 @@ Audrey Tautou (Amélie Poulain, Hors de Prix, Ensemble c'est Tout...)\\
 & \href{LIEN}{}\\
 \end{tabular}
 
-% TODO: add ana karina
+% TODO: ajouter:
+% michael londsale
+% ana karina
