--- a/LaTeX/main.tex
+++ b/LaTeX/main.tex
@@ -44,6 +44,7 @@ Cyrano de Bergerac, la pièce d'Edmond Rostand\\
 Antigone, la pièce de Jean Anouilh\\
 Balzac et la petite tailleuse chinoise (roman, Dai Sijie)\\
 La grammaire est une chanson douce (roman, Erik Orsenna)\\
+Le Viel Homme et la Mer (Hemingway)\\
 
 \subsection{BD}
 Deathnote (manga): histoire très complexe et pourtant très cohérente. Et seulement 12 tomes, donc pas besoin de se ruiner.\\
